[package]
name = "dst-huiji-wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
full_moon = { version = "2.2", features = ["lua52"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
dotenvy = "0.15"
